--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Resume
-description: Bookmark this to keep an eye on my project updates!
+title: Zia Malik
+description: Keep an eye for updates!
